trying to fix mobile overflow bug

--- a/react-langchain-one/src/css/ChatUI.css
+++ b/react-langchain-one/src/css/ChatUI.css
@@ -16,7 +16,6 @@
   display: flex;
   width: 100%;
   max-width: 766px;
-  max-height: 95vh;
   flex-direction: column;
   overflow: scroll;
 }
